test/code/test_class_visibility.out

Fatal error: Cannot access private property Hello::$hello in {{CWD}}/test/code/test_class_visibility.php on line 8
