test/code/test_class_visibility.php
<?php

class Hello {
    private $hello = "world";
}

$h = new Hello();
print "hello " . $h->hello . "\n";

